--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
     <p class="hide-on-small-only" style="margin-top: 140px;"><br></p>
   </div>
 
+  
+
   <div class="container center">
     <br class="hide-on-med-and-up">
     <br class="hide-on-med-and-up">
@@ -308,17 +310,11 @@
     <p class="text-titulo">NOSSA LOJA</p>
     <p><b>DESDE 1980</b> PROPORCIONANDO O MELHOR ATENDIMENTO COM TRANSPARÊNCIA E AGILIDADE!</p>
     <div class="row">
-      <div class="col s6 m3 animated fadeIn">
-        <img class="responsive-img" height="200" width="215" async src="imagens/loja1.jpeg">
+      <div class="col s12 m6 animated fadeIn">
+        <iframe src="https://www.google.com/maps/embed?pb=!4v1667852639770!6m8!1m7!1sCAoSLEFGMVFpcE1POWdZcTZTbEk2T2I2YXRLeTN2ZlhVbmZ4WkZhVm1aZ05iN01J!2m2!1d-22.2452253!2d-49.9358546!3f11.449809200405117!4f-3.6913789140194098!5f0.7820865974627469" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
-      <div class="col s6 m3 animated fadeIn">
-        <img class="responsive-img" height="200" width="215" async src="imagens/loja2.jpeg">
-      </div>
-      <div class="col s6 m3 animated fadeIn">
-        <img class="responsive-img" height="200" width="215" async src="imagens/loja3.jpeg">
-      </div>
-      <div class="col s6 m3 animated fadeIn">
-        <img class="responsive-img" height="100" width="215" async src="imagens/loja4.jpeg">
+      <div class="col s12 m6 animated fadeIn">
+        <iframe src="https://www.google.com/maps/embed?pb=!4v1667843308716!6m8!1m7!1sCAoSLEFGMVFpcE5mbS02b2lOYlJoWVM4RmVNM0s3eXVhNkgxaTlNdlNxbVJnTl9y!2m2!1d-22.2452253!2d-49.9358546!3f200!4f0!5f0.7820865974627469" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" class="center" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
   </div>
