--- a/index.html
+++ b/index.html
@@ -192,17 +192,13 @@
 
     <br>
 
-    <br>
-    <p>VALORES À BASE DE TROCA | GARANTIA DE QUALIDADE | ENTREGA E INSTALAÇÃO GRÁTIS EM MARÍLIA</p>
+    <p>RECEBA O SEU PRODUTO NO CONFORTO DO SEU LAR | AS MELHORES OFERTAS DE MARÍLIA VOCÊ ENCONTRA AQUI | LIGUE AGORA OU PEÇA PELO WHATSAPP</p>
     <br>
     
     <div>
-      <a  href="tel:01434330722" class="animated infinite pulse waves-light btn-large orange accent-4"><i class="material-icons left">phone</i><b>LIGUE E PEÇA SUA BATERIA</b></a>
+      <a  href="tel:01434330722" class="animated infinite pulse waves-light btn-large orange accent-4"><i class="material-icons left">phone</i><b>LIGUE AGORA</b></a>
     </div>
     <br><br>
-
-    <p class="center">SOBRE OUTRAS MARCAS</p>
-    <p class="center">ENTRE EM CONTATO COM OS NOSSOS VENDEDORES <b>(14) 3433-0722 / 99690-8744</b></p>
 
   </div>
 
@@ -233,8 +229,8 @@
   <div class="center">
     <br>
     <p class="text-titulo">NOSSO HORÁRIO DE FUNCIONAMENTO</p>
-    <p>SEGUNDA À SEXTA: 08:00 - 18:00</p>
-    <p>SÁBADO: 08:00 - 13:00</p>
+    <p>SEGUNDA À SEXTA: 08:00 - 19:00</p>
+    <p>SÁBADO: 09:00 - 19:00</p>
     <br><br>
   </div>
   
