--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <meta name="msapplication-navbutton-color" content="#000">
     
     <!--ENTRADA PARA BUSCADORES-->
-    <meta name="title" content="A Brasil Baterias - 42 anos em Marília">
+    <meta name="title" content="Droga Fé Marília">
     <meta name="description" content="Representante Autorizado em Marília"/>
-    <meta property="og:description" content="Representante Autorizado em Marília"/>
-    <meta name="keywords" content="Bateria Moura, Bateria Tudor, Bateria em Marília, Bateria Moura em Marília, Marília-SP, Bateria de carro, Baterias, Bateria Automotiva, carro, elétrica, automotivo, tudor, heliar, moura, free, automotive, battery, Marília, bateria para carro, bateria para caminhão, bateria para van, bateria para trator, bateria para onibus "/>
-    <meta name="author" content="A Brasil Baterias"/>
+    <meta property="og:description" content="A Droga Fé  tem os Melhores Preços em Produtos de Bem-Estar, Beleza e Saúde"/>
+    <meta name="keywords" content="Farmácia Droga Fé Marília contamos com a entrega mais rápida de Marília/SP"/>
+    <meta name="author" content="Farmácia Droga Fé"/>
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="imagens/favicons/apple-icon-144x144.png">
     <meta name="google-site-verification" content="xpfvLPC93tmTU8oSomNsnHzmiMAHOWTdVHs5Rd1tjGo" />
@@ -52,10 +52,6 @@
   .icons-navbar {
       padding-top: 10px
   }
-  .text-titulo{
-    font-weight: bolder;
-    font-size: 20px;
-  }
   .background {
     padding-top: 5%;
     padding-bottom: 5%;
@@ -84,15 +80,21 @@
     <br><br class="hide-on-small-only">
     <div class="row hide-on-small-only">
       <div class="col s6 m6 animated fadeIn">
-        <img src="imagens/produto.png" width="300px" class="responsive-img">
+        <img src="imagens/aptamil.png" width="230px" class="responsive-img">
       </div>
       <div class="col s6 m6 animated fadeIn">
-        <p class="left"> 
-          <b style="font-size: 17px">PRODUTO 1</b>
-          <br>descrição
+         
+          <b style="font-size: 17px" class="center">APTAMIL PREMIUM 800g - DANONE</b>
+          <p class="left" Align="justify">
+            fórmula infantil a base de proteínas lácteas intactas, 
+            indicada para crianças entre 6 e 1 ano de vida. 
+            Contém os exclusivos prebióticos Danone Nutricia, 
+            adequada relação ômega 6, ômega 3, os ácidos graxos DHA e ARA, 
+            além da presença de nucleotídeos. Seu teor de vitaminas A e C é adaptado ao 
+            Estudo Nutriplanet Brasil a. Contém lactose. Não contém glúten.
+          </p>
           <br><b style="font-size: 40px">R$ 000</b><br>
           <a href="" target=_blank><button class="btn green fonte2 white-text"><b>CONSULTE</b></button></a>
-        </p>
       </div>
     </div>
 
@@ -131,9 +133,9 @@
       <div class="card">
         <span class="new badge red" data-badge-caption="PROMOÇÃO"></span>
         <br><br>
-        <img src="imagens/produto.png" width=270px class="responsive-img">
+        <img src="imagens/aptamil.png" width="180px" class="responsive-img">
         <p>
-          <b>PRODUTO 1</b>
+          <b>APTAMIL PREMIUM 800g</b>
           <br>descrição
           <br><b style="font-size: 40px">R$ 000</b><br>
         </p>
