--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
     <meta name="keywords" content="Farmácia Droga Fé Marília contamos com a entrega mais rápida de Marília/SP"/>
     <meta name="author" content="Farmácia Droga Fé"/>
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="imagens/favicons/apple-icon-144x144.png">
     <meta name="google-site-verification" content="xpfvLPC93tmTU8oSomNsnHzmiMAHOWTdVHs5Rd1tjGo" />
 
     <title>Farmácia Droga Fé Marília</title>
 
-    <link rel="icon" type="image/png" sizes="32x32" href="imagens/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="imagens/favicon.ico">
 
   <!--CSS-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
