--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     padding-top: 5%;
     padding-bottom: 5%;
     /* background: orange; */
-    background-image: url('imagens/background.webp');
-    background-size: 133%;
+    background-image: url('imagens/background.jpg');
+    background-size: 113%;
   }
 </style>
 
@@ -82,40 +82,46 @@
         <img src="imagens/aptamil.png" width="230px" class="responsive-img">
       </div>
       <div class="col s6 m6 animated fadeIn">
-         
-          <b style="font-size: 17px" class="center">APTAMIL PREMIUM 800g - DANONE</b>
-          <p class="left" Align="justify">
-            fórmula infantil a base de proteínas lácteas intactas, 
-            indicada para crianças entre 6 e 1 ano de vida. 
-            Contém os exclusivos prebióticos Danone Nutricia, 
-            adequada relação ômega 6, ômega 3, os ácidos graxos DHA e ARA, 
-            além da presença de nucleotídeos. Seu teor de vitaminas A e C é adaptado ao 
-            Estudo Nutriplanet Brasil a. Contém lactose. Não contém glúten.
-          </p>
-          <br><b style="font-size: 40px">R$ 000</b><br>
-          <a href="" target=_blank><button class="btn green fonte2 white-text"><b>CONSULTE</b></button></a>
+        <b style="font-size: 17px" class="center">APTAMIL PREMIUM 800g - DANONE</b>
+        <p class="left" Align="justify">
+          fórmula infantil a base de proteínas lácteas intactas, 
+          indicada para crianças entre 6 e 1 ano de vida. 
+          Contém os exclusivos prebióticos Danone Nutricia, 
+          adequada relação ômega 6, ômega 3, os ácidos graxos DHA e ARA, 
+          além da presença de nucleotídeos. Seu teor de vitaminas A e C é adaptado ao 
+          Estudo Nutriplanet Brasil a. Contém lactose. Não contém glúten.
+        </p>
+        <br><b style="font-size: 40px">R$ 57<span style="font-size: 15px;">,90</span></b><br>
+        <a href="" target=_blank><button class="btn green fonte2 white-text"><b>CONSULTE</b></button></a>
       </div>
     </div>
 
-    <br class="hide-on-small-only"><br class="hide-on-small-only">
+    <br class="hide-on-small-only"><br class="hide-on-small-only"><br class="hide-on-small-only">
     
     <div class="row hide-on-small-only">
       <div class="col s6 m6 animated fadeIn">
-        <p class="right"> 
-          <b style="font-size: 17px">PRODUTO 2</b>
-          <br>descrição
-          <br><b style="font-size: 40px">R$ 000</b><br>
-          <a href="" target=_blank><button class="btn green fonte2 white-text"><b>CONSULTE</b></button></a>
+        <b style="font-size: 17px">FRALDA DESCARTÁVEL EVOLUTION TAM. G 44 unid.</b>
+        <p class="left" Align="justify">
+          A fralda Descartável Evolution G proporciona ao seu bebe sensação de frescor 
+          e suavidade durante todo o dia. Proporciona conforto e toque delicado.
+          Atua na proteção da pele através do seu toque suave externo que previne irritações e 
+          assaduras proporcionando conforto e segurança ao bebê. Suas camadas de gel super absorventes 
+          garantem total liberdade de movimentos e tranquilidade durante todo o dia a criança.
+        </p>
+        <br><b style="font-size: 40px">R$ 49<span style="font-size: 15px;">,90</span></b><br>
+        <a href="" target=_blank><button class="btn green fonte2 white-text"><b>CONSULTE</b></button></a>
         </p>
       </div>
       <div class="col s6 m6 animated fadeIn">
-        <img src="imagens/produto.png" width="300px" class="responsive-img">
+        <img src="imagens/fralda-evolution.png" width="180px" class="responsive-img">
       </div>
     </div>
 
+    <br class="hide-on-small-only"><br class="hide-on-small-only"><br class="hide-on-small-only">
+
     <div class="row hide-on-small-only">
       <div class="col s6 m6 animated fadeIn">
-        <img src="imagens/produto.png" width="300px" class="responsive-img">
+        <img src="imagens/teste-covid.png" width="300px" class="responsive-img">
       </div>
       <div class="col s6 m6 animated fadeIn">
         <p class="left"> 
