--- a/index.html
+++ b/index.html
@@ -56,14 +56,12 @@
     padding-bottom: 10%;
     /* background: orange; */
     background-image: url('imagens/background.jpg');
-    background-size: 100%;
+    background-size: 109%;
   }
   .background-mobile {
-    padding-top: 10%;
-    padding-bottom: 10%;
-    /* background: orange; */
-    background-image: url('imagens/background.jpg');
-    background-size: %;
+    padding-top: 5%;
+    background-image: url('imagens/background-mobile.jpg');
+    background-size: 150%;
   }
 </style>
 
@@ -73,10 +71,10 @@
   <div class="center background-desktop hide-on-small-only"><br class="hide-on-small-only">
     <div class="container">
       <div class="row">
-        <div class="col m8 animated fadeIn">
-          <img src="imagens/logo.png" width="500" class="responsive-img hide-on-small-only scrollreveal">
-          <h5 class="white-text hide-on-small-only scrollreveal">A ENTREGA MAIS RÁPIDA DE MARÍLIA</h5>
-          <div class="center animated infinite pulse scrollreveal" style="margin-top: 30px;">    
+        <div class="col m8 animated">
+          <img src="imagens/logo.png" width="500" class="responsive-img hide-on-small-only">
+          <h5 class="white-text hide-on-small-only">A ENTREGA MAIS RÁPIDA DE MARÍLIA</h5>
+          <div class="center animated infinite pulse" style="margin-top: 30px;">    
             <a href="" ><img src="imagens/atendimento-whats.png" class="responsive-img" width="250"></a>
           </div>
         </div>
@@ -87,13 +85,12 @@
   <!-- MOBILE -->
   <div class="center background-mobile hide-on-med-and-up"><br class="hide-on-small-only">
     <div class="container">
-      <img src="imagens/logo.png" width="500" class="responsive-img hide-on-small-only scrollreveal">
       <img src="imagens/logo.png" width="300" class="responsive-img hide-on-med-and-up scrollreveal">
-      <h5 class="white-text hide-on-small-only scrollreveal">A ENTREGA MAIS RÁPIDA DE MARÍLIA</h5>
       <p  class="white-text hide-on-med-and-up scrollreveal" style="font-size: 15px;">A ENTREGA MAIS RÁPIDA DE MARÍLIA</p>
       <div class="center animated infinite pulse scrollreveal" style="margin-top: 30px;">    
         <a href="" ><img src="imagens/atendimento-whats.png" class="responsive-img" width="250"></a>
       </div>
+      <img src="imagens/farmaceutica.png" width="200" class="responsive-img hide-on-med-and-up" style="margin-bottom: -7px">
     </div>  
   </div>
   
@@ -216,10 +213,10 @@
   </div>
 
   <div>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ff9800" fill-opacity="1" d="M0,96L48,128C96,160,192,224,288,224C384,224,480,160,576,122.7C672,85,768,75,864,85.3C960,96,1056,128,1152,144C1248,160,1344,160,1392,160L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ff6c00" fill-opacity="1" d="M0,96L48,128C96,160,192,224,288,224C384,224,480,160,576,122.7C672,85,768,75,864,85.3C960,96,1056,128,1152,144C1248,160,1344,160,1392,160L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     <p style="margin-top: -90px" class="hide-on-med-and-down"></p>
     <p style="margin-top: -30px" class="hide-on-large-only"></p>
-    <div class="background: orange">
+    <div style="background: #ff6c00">
       <div class="container center white-text scrollreveal">
         <br>
         <h4><b>ENCONTRE-NOS</b></h4>
@@ -237,7 +234,7 @@
       <br><br>
     </div>
     <p style="margin-top: -35px"></p>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 250"><path fill="#ff9800" fill-opacity="1" d="M0,96L48,128C96,160,192,224,288,224C384,224,480,160,576,122.7C672,85,768,75,864,85.3C960,96,1056,128,1152,144C1248,160,1344,160,1392,160L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 250"><path fill="#ff6c00" fill-opacity="1" d="M0,96L48,128C96,160,192,224,288,224C384,224,480,160,576,122.7C672,85,768,75,864,85.3C960,96,1056,128,1152,144C1248,160,1344,160,1392,160L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
   </div>
   
   <div class="center scrollreveal">
