--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         margin-top: 7px
     }
     .footer {
-        background: #000
+        background: #0000ff
     }
     .icons-navbar-desktop {
         padding-top: 11px
@@ -115,13 +115,13 @@
       <p>RECEBA O SEU PRODUTO NO CONFORTO DO SEU LAR | AS MELHORES OFERTAS DE MARÍLIA VOCÊ ENCONTRA AQUI </p>
       <br>
       <div>
-        <a  href="tel:01433010047" class="animated infinite pulse waves-light btn-large blue"><i class="material-icons left">phone</i><b>LIGUE AGORA</b></a>
+        <a  href="tel:01433010047" class="animated infinite pulse waves-light btn-large" style="background: #0000ff;"><i class="material-icons left">phone</i><b>LIGUE AGORA</b></a>
       </div>
     </div>
 
     <div class="center scrollreveal">
       <br><br>
-      <h4><b>soORÇAMENTO</b></h4>
+      <h4><b>SOLICITE UM ORÇAMENTO</b></h4>
       <p>FAÇA O SEU PEDIDO VIA WHATSAPP CONOSCO | GARANTIMOS O MELHOR PREÇO SEMPRE</p>
       <br>
       <div>
@@ -154,10 +154,10 @@
     <br class="hide-on-med-and-up">
 
     <div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ff6c00" fill-opacity="1" d="M0,96L48,128C96,160,192,224,288,224C384,224,480,160,576,122.7C672,85,768,75,864,85.3C960,96,1056,128,1152,144C1248,160,1344,160,1392,160L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0000ff" fill-opacity="1" d="M0,96L48,128C96,160,192,224,288,224C384,224,480,160,576,122.7C672,85,768,75,864,85.3C960,96,1056,128,1152,144C1248,160,1344,160,1392,160L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
       <p style="margin-top: -90px" class="hide-on-med-and-down"></p>
       <p style="margin-top: -30px" class="hide-on-large-only"></p>
-      <div style="background: #ff6c00">
+      <div style="background: #0000ff">
         <div class="container center white-text scrollreveal">
           <br>
           <h4><b>ENCONTRE-NOS</b></h4>
@@ -175,7 +175,7 @@
         <br><br>
       </div>
       <p style="margin-top: -35px"></p>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 250"><path fill="#ff6c00" fill-opacity="1" d="M0,96L48,128C96,160,192,224,288,224C384,224,480,160,576,122.7C672,85,768,75,864,85.3C960,96,1056,128,1152,144C1248,160,1344,160,1392,160L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 250"><path fill="#0000ff" fill-opacity="1" d="M0,96L48,128C96,160,192,224,288,224C384,224,480,160,576,122.7C672,85,768,75,864,85.3C960,96,1056,128,1152,144C1248,160,1344,160,1392,160L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
     </div>
   
     <div class="center scrollreveal">
@@ -189,7 +189,7 @@
     <div class="container center">
       <div class="row">
         <div class="col s6 m3 offset-m3 animated fadeIn">
-          <a  href="tel:01433010047" class="waves-light btn orange accent-4"><i class="material-icons left">phone</i><b>LIGUE AGORA</b></a>
+          <a  href="tel:01433010047" class="waves-light btn" style="background: #0000ff;"><i class="material-icons left">phone</i><b>LIGUE AGORA</b></a>
         </div>
         <div class="col s6 m3 animated fadeIn">
           <a href="https://api.whatsapp.com/send?phone=551433010047" class="waves-light btn green"><i class="material-icons left">chat</i><b>chat</b></a>
