--- a/index.html
+++ b/index.html
@@ -56,11 +56,6 @@
     .background-desktop {
       background-color: blue
     }
-    .background-mobile {
-      padding-top: 5%;
-      background-image: url('imagens/background-mobile-min.webp');
-      background-size: 150%;
-    }
   </style>
 
   <body style="font-family: 'Montserrat';">
@@ -74,12 +69,23 @@
     <!---BARRA DE NAVEGAÇÃO-->
     <div class="navbar-fixed scrollspy" id="home">
       <nav class="back-navbar">
-        <div class="container nav-wrapper"><a href="#home" class="infonav hide-on-small-only hide-on-med-only"><img src="imagens/logo.png" width="150" style="margin-top: 6px"></b>
-          <a href="#inicio" class="brand-logo left scrollpsy"><img src="imagens/logo.png" width="130" style="margin-top: 6px" class="responsive-img hide-on-large-only"></a></a>
+        <div class="container nav-wrapper">
+          <a class="infonav hide-on-small-only hide-on-med-only">
+            <img src="imagens/logo.png" width="150" style="margin-top: 12px">
+          </a>
+          <a class="brand-logo left scrollpsy">
+            <img src="imagens/logo.png" width="130" style="margin-top: 10px" class="responsive-img hide-on-large-only">
+          </a>
           <div class="right">
-            <a class="btn white-text hide-on-large-only green" href="tel:01433010047"><i class="material-icons left" style="margin-top:-10px">phone</i><b>3301-0047</b></a>
-            <a href=https://www.facebook.com/drogafemarilia target=_blank><img src=imagens/facebook.png class="responsive-img icons-navbar-desktop hide-on-small-only hide-on-med-only" width=40></a>
-            <a href=https://www.instagram.com/drogafemariliasp target=_blank><img src=imagens/instagram.png class="responsive-img icons-navbar-desktop hide-on-small-only hide-on-med-only" width=40></a>
+            <a class="btn white-text hide-on-large-only green" href="tel:01433010047">
+              <i class="material-icons left" style="margin-top:-10px">phone</i><b>3301-0047</b>
+            </a>
+            <a href=https://www.facebook.com/drogafemarilia target=_blank>
+              <img src=imagens/facebook.png class="responsive-img icons-navbar-desktop hide-on-small-only hide-on-med-only" width=40>
+            </a>
+            <a href=https://www.instagram.com/drogafemariliasp target=_blank>
+              <img src=imagens/instagram.png class="responsive-img icons-navbar-desktop hide-on-small-only hide-on-med-only" width=40>
+            </a>
           </div>
           </nav>
         </div>
@@ -93,11 +99,14 @@
           <div class="col m6 animated hide-on-med-and-up">
             <img src="imagens/empresa.png" width="500" class="responsive-img">
           </div>
-          <div class="col m6 animated">
-            <h5 class="white-text" style="margin-top: 25%" >Medicamentos, Produtos de Higiene, Perfumaria e Cosméticos você encontra aqui!</h5>
+          <div class="col m6 animated white-text">
+            <h5 class="hide-on-med-and-up">Medicamentos, Produtos de Higiene, Perfumaria e Cosméticos você encontra aqui!</h5>
+            <h5 class="hide-on-small-only"style="margin-top: 25%">Medicamentos, Produtos de Higiene, Perfumaria e Cosméticos você encontra aqui!</h5>
             <h5 class="white-text"><b>A ENTREGA MAIS RÁPIDA DE MARÍLIA</b></h5>
             <div class="center animated infinite pulse" style="margin-top: 30px;">    
-              <a class="tag_googleads" href="https://api.whatsapp.com/send?phone=551433010047" ><img src="imagens/atendimento-whats.png" class="responsive-img" width="250"></a>
+              <a class="tag_googleads" href="https://api.whatsapp.com/send?phone=5514997823656&text=Olá! vim pelo o site e gostaria de ser atendido(a) via WhatsApp">
+                <img src="imagens/atendimento-whats.png" class="responsive-img" width="250">
+              </a>
             </div>
           </div>
           <div class="col m6 animated">
@@ -164,12 +173,7 @@
           <p>AV. TOMÉ DE SOUZA, 528 - JARDIM MONTE CASTELO, MARÍLIA/SP</P>
           <p>SUA FARMÁCIA COM MEDICAMENTOS, REMÉDIOS GENÉRICOS, DERMOCOSMÉTICOS, ITENS DE CUIDADO DIÁRIO, PRODUTOS PARA CRIANÇAS E MUITO MAIS</p>
           <div class="row">
-            <div class="col s12 m6 animated fadeIn">
-              <iframe async src="https://www.google.com/maps/embed?pb=!4v1667852639770!6m8!1m7!1sCAoSLEFGMVFpcE1POWdZcTZTbEk2T2I2YXRLeTN2ZlhVbmZ4WkZhVm1aZ05iN01J!2m2!1d-22.2452253!2d-49.9358546!3f11.449809200405117!4f-3.6913789140194098!5f0.7820865974627469" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-            <div class="col s12 m6 animated fadeIn">
-              <iframe async src="https://www.google.com/maps/embed?pb=!4v1667843308716!6m8!1m7!1sCAoSLEFGMVFpcE5mbS02b2lOYlJoWVM4RmVNM0s3eXVhNkgxaTlNdlNxbVJnTl9y!2m2!1d-22.2452253!2d-49.9358546!3f200!4f0!5f0.7820865974627469" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" class="center" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14771.457370489645!2d-49.9358546!3d-22.2452253!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94bfda028edaa3a3%3A0xe6197d77beccc7e8!2zRmFybcOhY2lhIERyb2dhIEbDqQ!5e0!3m2!1spt-BR!2sbr!4v1685454407435!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
         <br><br>
@@ -192,19 +196,19 @@
           <a  href="tel:01433010047" class="waves-light btn" style="background: #0000ff;"><i class="material-icons left">phone</i><b>LIGUE AGORA</b></a>
         </div>
         <div class="col s6 m3 animated fadeIn">
-          <a href="https://api.whatsapp.com/send?phone=551433010047" class="waves-light btn green"><i class="material-icons left">chat</i><b>chat</b></a>
+          <a href="https://api.whatsapp.com/send?phone=5514997823656&text=Olá! vim pelo o site e gostaria de ser atendido(a) via WhatsApp" class="waves-light btn green"><i class="material-icons left">chat</i><b>chat</b></a>
         </div>
       </div>
     </div>
 
     <!-- WHATSAPP DESKTOP -->
     <div class="fixed-action-btn tooltipped hide-on-med-and-down" data-tooltip="Converse Conosco" data-position="left">
-      <a class="btn-floating btn-large waves-effect waves-light" data-tooltip="I am a tooltip" data-position="bottom" href="https://api.whatsapp.com/send?phone=551433010047"><img src=imagens/btn-whats.png class=responsive-img width=70></a>
+      <a class="btn-floating btn-large waves-effect waves-light" data-tooltip="I am a tooltip" data-position="bottom" href="https://api.whatsapp.com/send?phone=5514997823656&text=Olá! vim pelo o site e gostaria de ser atendido(a) via WhatsApp"><img src=imagens/btn-whats.png class=responsive-img width=70></a>
     </div>
 
     <!-- WHATSAPP MOBILE -->
     <div class="fixed-action-btn hide-on-med-and-up animated infinite pulse">
-      <a class="btn-floating btn-large waves-effect waves-light" href="https://api.whatsapp.com/send?phone=551433010047"><img src=imagens/btn-whats.png class=responsive-img></a>
+      <a class="btn-floating btn-large waves-effect waves-light" href="https://api.whatsapp.com/send?phone=5514997823656&text=Olá! vim pelo o site e gostaria de ser atendido(a) via WhatsApp"><img src=imagens/btn-whats.png class=responsive-img></a>
     </div>
 
     <br><br>
