--- a/index.html
+++ b/index.html
@@ -134,9 +134,10 @@
       <p>FAÇA O SEU PEDIDO VIA WHATSAPP CONOSCO | GARANTIMOS O MELHOR PREÇO SEMPRE</p>
       <br>
       <div>
-        <a  href="tel:01433010047" class="animated infinite pulse waves-light btn-large green">
-          <b>PEDIR PELO WHATSAPP</b>
-        </a>
+          <a href="https://api.whatsapp.com/send?phone=5514997823656&text=Olá! vim pelo o site e gostaria de ser atendido(a) via WhatsApp" class="animated infinite pulse waves-light btn-large green">
+            <i class="material-icons left">chat</i>
+            <b>PEDIR PELO WHATSAPP</b>
+          </a>
       </div>
     </div>
 
